# local-voice-ai-lab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug_report.yml  feature_request.yml  safety_license.yml
.github/workflows/: ci.yml  pages.yml
blog/: voxtral-fluidaudio-parakeet-deep-comparison.md
docs/: ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  CLAIMS.md  MODEL_MATRIX.md  PROJECT_SPEC.md  PUBLISHING_CHECKLIST.md  ROADMAP.md  SAFETY_AND_LICENSES.md
examples/: CONSENT.example.md  README.md
examples/prompts/: clone_target.txt  reference_transcript.txt  tts_en.txt
licenses/: models.yml
reports/: sample_voice_lab_report.md  sample_voice_lab_results.csv
scripts/: __init__.py  publish_check.py  voice_lab.py  voxtral_voice_clone_api.py
site/: index.html  script.js  styles.css
tests/: __init__.py  test_voice_lab.py
